# Code-IQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  flow.py  main.py  nodes.py  pyproject.toml  pytest.ini  requirements.txt  run_tutorials_for_subfolders_recursive.py  shared_schema.py
api/: __init__.py  app.py  job_store.py  project_store.py  runner.py  schemas.py  webhooks.py
docs/: design.md  edit-scope.md  post-mvp-plan.md
output/99/: 01_global_state___entry_point.md  02_ui___window_management.md  03_agents___rules__skills_.md  04_operations__ops_.md  05_the_request_lifecycle.md  06_context_intelligence__lsp___tree_sitter_.md  07_ai_providers__backends_.md  08_prompt_completions.md  index.md
output/AionUi/: 01_agent_task_orchestration.md  02_agent_protocol_adapters.md  03_tools___skills_framework.md  04_prompt_engineering_protocols.md  05_ipc_bridge__inter_process_communication_.md  06_channel___plugin_system.md  (+2 more)
tasks/: tasks-codebase-knowledge-builder.md  tasks-post-mvp-api-and-ui.md
tests/: test_api_build.py  test_api_jobs.py  test_api_projects.py  test_api_webhooks.py  test_batch_flow.py  test_call_llm.py  test_context_helpers.py  test_crawl_github.py  test_crawl_local.py  test_dir_helpers.py  test_discover_node.py  test_flow.py  test_hierarchical_view.py  test_main_cli.py  test_nodes.py  test_parallel_flow.py  test_shared_schema.py
ui/: README.md  app.py
utils/: __init__.py  call_llm.py  context_helpers.py  crawl_github_files.py  crawl_local_files.py  dir_helpers.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+543 files in other folders)
